assets/css/styles.css
/* ... */
.home__perfil{
  width: 204px;
  height: 308px;
  background: var(--gradient-color);
  border-radius: 5.5rem;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.home__img{
  width: 188px;
}

.home__scroll{
  color: var(--first-color);
  right: -1.5rem;
  bottom: 4rem;
  row-gap: 2rem;
  justify-content: center;
  position: absolute;
  display: grid;
}

.home__scroll-icon{
  font-size: 1.25rem;
}

.home__scroll-name{
  font-size: var(--smaller-font-size);
  transform: rotate(-90deg);
}

.home__buttons{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.home__social{
  position: absolute;
  bottom: 5rem;
  left: 0;
  display: grid;
  row-gap: .5rem;
}

.home__social-link{
  font-size: 1.25rem;
  color: var(--first-color);
  transition: color .3s;
  width: max-content;
  background-color: var(--container-color);
  padding: .25rem;
  border-radius: .75rem;
  display: flex;
  font-size: 1rem;
  transition: 0.5s;
}

.home__social-link:hover{
  color: #fff;
  background-color: var(--first-color);
  opacity: 1;
}

.home__social::after{
  content: '';
  width: 32px;
  height: 2px;
  background-color: var(--first-color);
  transform: rotate(90deg) translate(16px, 2px);
}

/*=============== BUTTONS ===============*/
.button{
  display: inline-block;
  background-color: var(--first-color);
  color: var(--body-color);
  padding: .75rem 1rem;
  border-radius: 50px;
  font-weight: var(--font-medium);
  justify-self: center;
}

.button:hover {
  opacity: 1;
  color: var(--body-color);
  background-color: var(--first-color);
}

.button--ghost{
  background-color: transparent;
  border: 2px solid var(--first-color);
  color: var(--first-color);
  transition: 0.5s;
}
/*=============== ABOUT ===============*/
.about__img{
  width: 320px;
  border-radius: 1.5rem;
  justify-self: center;
}

.about__blob{
  position: relative;
  width: 340px;
  height: 196px;
  background-color: var(--body-color);
  border: 2px solid var(--first-color);
  justify-self: center;
  border-radius: 1.5rem;
  place-items: center;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  transition: background .8s;
  /* For dark mode animation */
}

/* can add in the future */
/* .about__perfil{
  width: 204px;
  height: 308px;
  background: var(--gradient-color);
  border-radius: 5.5rem;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: flex-end;
} */

.about__description{
  margin-bottom: 1rem;
}

.about__description p{
  margin-bottom: 1rem;
}


.about__description mark{
  background-color: hsl(27deg 59% 80%);
  color: var(--text-color);
}
/*=============== HOME ===============*/
/*
.home__shape-wawes,
.home__shape-circle{
  position: absolute;
  opacity: .1;
}
.home__shape-wawes{
  width: 50px;
  left: -1.5rem;
  top: 5rem;
}
.home__shape-circle{
  width: 150px;
  bottom: -2rem;
  right: -3rem;
  transform: rotate(15deg);
  z-index: -1;
}
.home__social{
  justify-self: center;
  display: flex;
  column-gap: 1.25rem;
}
.home__social-link{
  font-size: 1.25rem;
  color: var(--text-color-light);
  transition: color .3s;
}
.home__social-link:hover{
  color: var(--title-color);
}
.home__info{
  display: grid;
  row-gap: 2rem;
}
.home__info-title{
  font-family: var(--body-font);
  font-size: var(--smaller-font-size);
  font-weight: 400;
  color: var(--text-color-light);
  margin-bottom: 1rem;
}
.home__info-description,
.home__info-number{
  font-family: var(--title-font);
  color: var(--title-color);
}
.home__info-description{
  padding-right: 4rem;
}
.home__info-number{
  font-size: var(--h1-font-size);
  font-weight: var(--font-semi-bold);
} */

/*
.home__shape-wawes,
.home__shape-circle{
  position: absolute;
  opacity: .1;
}
.home__shape-wawes{
  width: 50px;
  left: -1.5rem;
  top: 5rem;
}
.home__shape-circle{
  width: 150px;
  bottom: -2rem;
  right: -3rem;
  transform: rotate(15deg);
  z-index: -1;
}
.home__social{
  justify-self: center;
  display: flex;
  column-gap: 1.25rem;
}
.home__social-link{
  font-size: 1.25rem;
  color: var(--text-color-light);
  transition: color .3s;
}
.home__social-link:hover{
  color: var(--title-color);
}
.home__info{
  display: grid;
  row-gap: 2rem;
}
.home__info-title{
  font-family: var(--body-font);
  font-size: var(--smaller-font-size);
  font-weight: 400;
  color: var(--text-color-light);
  margin-bottom: 1rem;
}
.home__info-description,
.home__info-number{
  font-family: var(--title-font);
  color: var(--title-color);
}
.home__info-description{
  padding-right: 4rem;
}
.home__info-number{
  font-size: var(--h1-font-size);
  font-weight: var(--font-semi-bold);
} */
/*=============== SKILLS ===============*/
.skills__container{
  row-gap: 3.5rem;
}

.skills__title{
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: .5rem;
  font-size: var(--small-font-size);
  font-weight: var(--font-semi-bold);
  margin-bottom: 2.5rem;
}

.skills__title i{
  font-size: 1rem;
  font-weight: initial;
}

.skills__info,
.skills__data,
.skills__blob{
  display: grid;
}

.skills__info{
  grid-template-columns: repeat(3, 1fr);
  gap: 2.5rem 2rem;
}

.skills__data{
  justify-content: center;
  text-align: center;
}

.skills__blob{
  width: 80px;
  height: 100px;
  background-color: hsl(27deg 67% 91%);
  border-radius: 3rem;
  place-items: center;
  margin-bottom: 1rem;
  transition: background .8s; /* For dark mode animation */
}

.skills__blob img{
  width: 40px;
}

.skills__name{
  font-size: var(--small-font-size);
  margin-bottom: .25rem;
}

.skills__subtitle{
  font-size: var(--tiny-font-size);
  color: var(--text-color-light);
}
/* Animation skills */
.skills__blob:hover img{
  animation: bounce-skills .6s;
}

@keyframes bounce-skills{
  0%{
    transform: translate(0);
  }
  20%{
    transform:  translateY(-6px);
  }
  40%{
    transform: translate(0);
  }
  60%{
    transform: translateY(-3px);
  }
  80%{
    transform: translate(0);
  }
}
/* ... */

